<resources>
    <string name="app_name">FrontAki</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Feed">Feed</string>
    <string name="Pesquisa">Pesquisa</string>
    <string name="Postagem">Postagem</string>
    <string name="Perfil">Perfil</string>
    <string name="LogoCadastro">LogoCadastro</string>
    <string name="perguntas">Perguntas</string>
    <string name="respostas">Respostas</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="salvos">Salvos</string>
    <string name="ConfigEmail">E-mail</string>
    <string name="ConfigDataAniv">Data de Aniversário:</string>
    <string name="ConfigNome">Nome</string>
    <string name="nomeCadPremium">Nome</string>
    <string name="cpfCadPremium">CPF</string>
    <string name="senhaCadPremium">Senha</string>
    <string name="cadastrarButtonPremium">CADASTRAR</string>
    <string name="bemvindoPremium">BemVindoPremium</string>
    <string name="cadastre_se_no_premium_e_ganhe_benef_cios">Cadastre-se no PREMIUM e ganhe benefícios!</string>
    <string name="emailCadPreimium">Email</string>
    <string name="LogoCadastroPremium">LogoCadastroPremium</string>
    <string name="alterar_foto">Alterar Foto</string>
    <string name="nomeAlterar">Nome Usuário</string>
    <string name="nome_usu_rio">Nome Usuário</string>
    <string name="telefoneAlterar">Telefone</string>
    <string name="emailAlterar">E-mail</string>
    <string name="senhaAlterar">Senha</string>
    <string name="salvarAlteracoes">SALVAR ALTERAÇÕES</string>
    <string name="buttonSalvarAlt">SALVAR ALTERAÇÕES</string>
    <string name="salvarAlteracoes">SALVAR ALTERAÇÕES</string>
    <string name="buttonSalvarAlter">buttonSalvarAlter</string>
    <string name="salvar_alteracoes">SALVAR ALTERAÇÕES</string>
</resources>